# cog-vllm

./: .dockerignore  .gitattributes  .gitignore  .pylintrc  Dockerfile  README.md  async_test.py  cog-vllm-helper.py  cog.yaml  default.nix  flake.nix  lock.json  predict.py  predict_batch.py  predict_streaming.py  prompt_templates.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.sh  train.py  utils.py
.github/workflows/: build-and-push.yml  ci.yml  lint-and-test.yml
scripts/: download.py
simple-build/: Dockerfile  schema.json
tests/end_to_end/: test_predict.py
tests/end_to_end/local/: test_predict.py
tests/local/end_to_end/: test_cog_vllm_helper.py
tests/unit/: test_predict.py
