[project]
name = "cog-vllm"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "cog==0.10.0a10",
    "aiohttp[speedups]>=3.9.5",
    "scipy>=1.13.1",
    "sentencepiece>=0.2.0",
    "protobuf>=5.27.0",
    "huggingface-hub>=0.23.2",
    "httpx>=0.27.0",
    "tqdm>=4.66.4",
    "torch>=2.3.0",
    "jinja2>=3.1.4",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cog_vllm"]
